refactor: use getFirst() instead of get(0) for better clarity